# Typma-Programming-Language

./: README.md  dune-project  et.opam
dep/_build/default/: typ.dune-package  typ.opam
dep/_build/default/.dune/: configurator
dep/_build/default/extract/: .Extract.aux  Datatypes.mli  Extract.glob  Extract.v  Extract.v.d  Extract.vo  String.ml  String.mli  Sus.ml  Sus.mli  Test.ml  Test.mli  Typma.ml  Typma.mli  typ.cma  typ.cmxa  typ.cmxs  typ.ml-gen
dep/_build/default/extract/.merlin-conf/: lib-typ
dep/_build/default/extract/.typ.objs/: Bool.ml.d  Bool.mli.d  Datatypes.ml.d  Datatypes.mli.d  Nat.ml.d  Nat.mli.d  String.ml.d  String.mli.d  Sus.ml.d  Sus.mli.d  Test.ml.d  Test.mli.d  Typma.ml.d  Typma.mli.d  typ__Nat.intf.all-deps  typ__Typma.impl.all-deps  typ__Typma.intf.all-deps
dep/_build/default/extract/.typ.objs/byte/: typ.cmi  typ.cmo  typ.cmt  typ__Bool.cmi  typ__Bool.cmo  typ__Bool.cmt  typ__Bool.cmti  typ__Datatypes.cmi  typ__Datatypes.cmo  typ__Datatypes.cmt  typ__Datatypes.cmti  typ__Nat.cmi  typ__Nat.cmo  typ__Nat.cmt  typ__Nat.cmti  typ__String.cmi  typ__String.cmo  typ__String.cmt  typ__String.cmti  typ__Sus.cmi  typ__Sus.cmo  typ__Sus.cmt  typ__Sus.cmti  typ__Test.cmi  typ__Test.cmo  typ__Test.cmt  typ__Test.cmti  typ__Typma.cmi  typ__Typma.cmo  typ__Typma.cmt  typ__Typma.cmti
dep/_build/default/extract/.typ.objs/native/: typ.cmx  typ__Bool.cmx  typ__Datatypes.cmx  typ__Nat.cmx  typ__String.cmx  (+3 more)
dep/_build/default/lib/: .Sus.aux  .Test.aux  .Typma.aux  Sus.glob  Sus.v  Sus.v.d  Sus.vo  Test.v.d  Test.vo  Typma.glob  Typma.v  Typma.v.d  Typma.vo
(+315 files in other folders)
